[package]
name = "raft_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "raft_rs"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "raft_rs"
path = "src/bin/server.rs"


[dependencies]
axum = "0.7.4"
clap = {version = "4.5.2",features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = "1.2.0"
rmp-serde = "1.1.2"
log = "0.4.21"
reqwest = {version = "0.11.25",features = ["json"]}
